--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
+  workflow_dispatch: 
 
 permissions:
   contents: read
@@ -14,42 +14,30 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v5
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Node
+        uses:  actions/setup-node@v4
         with:
-          node-version: 20   # or whichever Node version you want
-
+          node-version: '18'
       - name: Install dependencies
-        run: |
-          cd project
-          npm ci
-
-      - name: Build Astro site
-        run: |
-          cd project
-          npm run build
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+        run:  npm install
+        working-directory: ./project
+      - name: Build
+        run:  npm run build
+        working-directory: ./project
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: github-pages
-          path: project/dist   # default Astro build output
+          path: ./project/dist
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    environment: 
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: github-pages
-          path: dist
-
-      - name: Deploy to GitHub Pages
+      - name:  Deploy to GitHub Pages
+        id:  deployment
         uses: actions/deploy-pages@v4
-        id: deployment
-        with:
-          folder: dist
